@@ -1,14 +1,14 @@
 Package: seq2pathway
 Type: Package
-Title: a novel tool for functional gene-set (or termed as pathway) analysis of next-generation sequencing data
-Version: 1.1.4
-Date: 2015-01-06
+Title: a novel tool for functional gene-set (or termed as pathway)
+        analysis of next-generation sequencing data
+Version: 1.1.5
+Date: 2015-09-18
 Author: Xinan Yang <xyang2@uchicago.edu>; Bin Wang <binw@uchicago.edu>
-Maintainer: Bin Wang <binw@uchicago.edu>
+Maintainer: Xinan Yang <xyang2@uchicago.edu> with contribution from Lorenzo Pesce <lpesce@uchicago.edu> and Ana Marija Sokovic <anamarija@uchicago.edu>
 Depends: R (>= 2.10.0)
 biocViews: Software
 Imports: nnet, WGCNA, GSA, biomaRt, GenomicRanges, seq2pathway.data
-PackageStatus: Deprecated
 Description: Seq2pathway is a novel tool for functional gene-set (or termed as pathway) analysis of next-generation sequencing data, consisting of "seq2gene" and "gene2path" components. The seq2gene links sequence-level measurements of genomic regions (including SNPs or point mutation coordinates) to gene-level scores, and the gene2pathway summarizes gene scores to pathway-scores for each sample. The seq2gene has the feasibility to assign both coding and non-exon regions to a broader range of neighboring genes than only the nearest one, thus facilitating the study of functional non-coding regions. The gene2pathway takes into account the quantity of significance for gene members within a pathway compared those outside a pathway. The output of seq2pathway is a general structure of quantitative pathway-level scores, thus allowing one to functional interpret such datasets as RNA-seq, ChIP-seq, GWAS, and derived from other next generational sequencing experiments.  
 License: GPL-2
-
+Packaged: 2015-09-19 19:38:45 UTC; xyang
